--- a/neichizu/css/style.scss
+++ b/neichizu/css/style.scss
@@ -10,7 +10,7 @@ html{
    height: 100%;
 }
 body { 
-   background-image: url(../img/pastel.jpeg);
+   background-image: url(../img/nature_back.webp);
    font-family: "M PLUS Rounded 1c";
    margin: 0;
    padding: 0;
@@ -89,7 +89,7 @@ p{
 }
 /* Class */
 .wrapper{
-   background-image: url(../img/pastel.jpeg);
+   background-image: url(../img/nature_back.png);
    display: flex;
    flex-direction: column;
 }
@@ -132,7 +132,7 @@ p{
 .content{
    margin: 5%;
 .white_back{
-   background-color: #E0FFFF;
+   background-color: #ffffe0;
    border: #2b2e2c;
    width: 100%;
    height: auto;
@@ -147,6 +147,7 @@ p{
       .white_back_inner_eyecatch{
          margin: 5%;
          .white_inner_map-title{
+            white-space: nowrap;
             font-size: 1.5rem;
             margin-bottom: 5px;
          }
@@ -165,6 +166,7 @@ p{
 .link_url{
    color: rgb(60, 60, 183);
    display: block;
+   white-space: nowrap;
    text-align: center;
 }
 .space{
@@ -173,9 +175,13 @@ p{
 }
 //end content
 .foot_nav{
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
     .foot_nav_p{
       font-family: "M PLUS Rounded 1c";
-      text-align: center;
+      
     }
     .foot_nav_link{
       font-family: "M PLUS Rounded 1c";
